# neopixel-spi-mt3620

./: CMakeLists.txt  app_manifest.json  main.c  pixels.c  pixels.h
HardwareDefinition/: neopixel.json
HardwareDefinition/inc/hw/: neopixel.h
effects/: blue_wave.c  effects.h  rainbow.c  red_green.c  sparkle.c
